<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddPolicemanActivity">

    <ProgressBar
        android:id="@+id/addPolicemenPB"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:max="100"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/policemanNameET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hint_enter_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/policemanphoneET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_enter_contact"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/stationSpinner"
        app:layout_constraintStart_toStartOf="@+id/stationSpinner"
        app:layout_constraintTop_toBottomOf="@+id/stationSpinner" />

    <EditText
        android:id="@+id/policemanMailET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_enter_mail"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/policemanphoneET"
        app:layout_constraintStart_toStartOf="@+id/policemanphoneET"
        app:layout_constraintTop_toBottomOf="@+id/policemanphoneET" />

    <Spinner
        android:id="@+id/designationSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/policemanNameET"
        app:layout_constraintStart_toStartOf="@+id/policemanNameET"
        app:layout_constraintTop_toBottomOf="@+id/policemanNameET" />

    <Spinner
        android:id="@+id/stationSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/designationSpinner"
        app:layout_constraintStart_toStartOf="@+id/designationSpinner"
        app:layout_constraintTop_toBottomOf="@+id/designationSpinner" />

    <Button
        android:id="@+id/addPolicemanBTN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="CONFIRM"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

</android.support.constraint.ConstraintLayout>